# CppCourse

./: .gitignore  2020win.tex  2021_projects.docx  Aspirant  Bank.cpp  Bank.h  Bank_test.cpp  CMakeLists.txt  Class.cpp  CppTasks2020.tex  CppTutorString.ppt  CppTutorUkr8_9.ppt  Evolution_Harbuz.cpp  Evolution_Harbuz.h  Evolution_Harbuz.txt  Evolution_Harbuz_test.cpp  Header.h  IPOLY_Unit_Test.cpp  IPOLY_Unit_Test.h  IPolyClass.cpp  IPolyClass.h  Karamushka_ Nabok.cpp  LICENSE  MeanQuestionsCpp2020.docx  Polynome  Questions2019.rtf  Questions2020.docx  Questions2021.docx  README.md  SPLINE_Unit_Test.cpp  SPLINE_Unit_Test.h  Source.cpp  SplineClass.cpp  SplineClass.h  Test.cpp  Zmist.docx  Zmist.odt  book_unv.cls  classwork8_12.odt  dz12.1  (+57 more)
BANK_Goryslavets_Zelenko/: 1BANK_Goryslavets.cbp  1BANK_Goryslavets.depend  main.cpp
Color/: main.cpp
DateTimeArestonok/: CMakeLists.txt  main_test.cpp
Equel/: Equel.sln
Lect01/: CppTutorUkr0.ppt  c_func.c  float_comp.cpp  float_comp1.c  hello_floats.c  main_print.c
Lect02/: ByteBites.java  Calculator.java  CppTutorUkr1.ppt  InitialValues2.java  JavaTutorUkr1.ppt  JavaTutorUkr1_2.ppt  L2_1_SimpleConstructor.java  L2_2NoSimpleTests.java  L2_3OrderOfInitialization.java  L2_4TerminationCondition.java  L2_5StaticInitialization.java  L5_6ExplicitStatic.java  Operation.java  Operation2.java  PrimitiveTypes.java  QuadraticEquation.java  VarArgs.java  bool.c  bool.java  bool1.c  cp2.c  double_comp.c  fib.c  ints.c  main.c  maxes.c  prog1.c  sizeof.c  staticInit.java  tasks1.docx  tasks1_2.docx  vvod_ar.c
Lect03/: CppTutorUkr2.ppt  arr_decl.c  arr_ptr.c  chars.c  lexems.c  matr1.c  matr5.cpp  matr6.c  matr6.cpp  (+5 more)
(+404 files in other folders)
